== Changelog ==
= 1.7.9 =
* Fix: Ajax search plugins conflict since previous release
* Feature: New position option "in meta" for brands in the single product page
* Feature: New param "only_parents" for "pwb-az-listing"
* Enhancement: Sections for brands settings tab in admin
= 1.7.8 =
* Fix: Hidden products contribute towards product count for "pwb-all-brands" shortcode
* Enhancement: Replace hardcoded thumbnail size for product loops with selected size (thanks @orjhor)
* Feature: Redirect if the search matches with a brand name. Better product search experience.
* Feature: Add the possibility to filter by product category on product carousel shortcode (thanks @lasdou)
* Dev: New filter hook "pwb_html_before_brands_links"
* Tested on WooCommerce 3.9
= 1.7.7 =
* Enhancement: Better support for special characters in "AZ-Listing" shortcode
* Fix: Filter by brand widget shows incorrect brands under certain conditions
* Fix: Filter by brands in product tags pages and other product taxonomies
* Update: WC 3.8 compatibility
* Dev: New filter hook "pwb_text_before_brands_links"
* Dev: New filter hook "pwb_product_tab_brand_logo_size"
* Dev: "[pwb-az-listing]" and "[pwb-brand]" templates for theme overrides
= 1.7.6 =
* Tested up to, bump
* Dev: New filter hook "woocommerce_product_brand_heading" for editing the "Brand" tab heading
* Fix: Some problems with the "Brand" product tab
* Fix: Avoid a possible JS conflict caused by "wp_localize_script"
= 1.7.5 =
* Fix: Stupid JS error introduced in the previous version
= 1.7.4 =
* Fix: Mismatched columns when a brand is added
* Tweak: Disable brand tab when product not have brand
* Dev: New filter hook 'pwb_dropdown_placeholder'
* Dev: New filter hooks 'pwb_carousel_prev' and 'pwb_carousel_next' for customize the carousel arrows
* Dev: Override templates via a theme
* Minor fixes and tweaks
= 1.7.3 =
* Enhancement: Performance improvements
* Fix: Breadcrumbs doesn't take in account pagination
= 1.7.2 =